tests/type_errors/zip_non_list_arg.nos
# expect_error: expected List
# zip requires a List argument, not a primitive
main() = [1,2,3].zip(42)
